--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ethers": "^6.13.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.19.3"
   },
   "devDependencies": {
     "@types/node": "^20",
